RDCC-4538:Changes made to sonar issues (#281)